--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,6 +77,10 @@ a {
     color: #198754;
 }
 
+.dropdown-menu {
+    width: 200px;
+}
+
 .nav-s {
     padding: 1rem;
     display: flex;
@@ -98,9 +102,12 @@ a {
     display: flex;
     list-style: none;
     font-size: 1.3rem;
+    text-align: center;
+    align-self: center;
 }
 
 .nav-link-drop {
+    text-align: center;
     font-size: 80%;
 }
 
