--- a/templates/404.html
+++ b/templates/404.html
@@ -1,8 +1,25 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load static %}
+{% block title %}Error: 404{% endblock %}
+
+{% endblock %}
 
 {% block content %}
-
-
-
+<div class="container">
+  <div class="row h-100">
+    <div class="col col-lg-6 col-md-8 col-sm-12 m-auto text-center p-3">
+      <div class="card border-0">
+        <img src="{% static 'img/404-page.png' %}" class="card-img-top" alt="404 page image">
+        <div class="card-body">
+          <h1 class="card-title logo-text">Oops, page not found</h1>
+          <h5 class="card-text">Looks like you got lost along the way.</h5>
+          <h4>
+            <a href="{% url 'start' %}" class="sign-up-button btn btn-lg text-uppercase py-2">Back to Recipes</a>
+        </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
