--- a/templates/400.html
+++ b/templates/400.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load static %}
-{% block title %}Error: 404{% endblock %}
+{% block title %}Error: 400{% endblock %}
 
 {% endblock %}
 
@@ -10,10 +10,9 @@
   <div class="row h-100">
     <div class="col col-lg-6 col-md-8 col-sm-12 m-auto text-center p-3">
       <div class="card border-0">
-        <img src="#" class="card-img-top" alt="404 page image">
+        <img src="#" class="card-img-top" alt="400 page image">
         <div class="card-body">
-          <h1 class="card-title logo-text">Oops, page not found</h1>
-          <h5 class="card-text">Looks like you got lost along the way.</h5>
+          <h1 class="card-title logo-text">Oops, bad request</h1>
           <h4>
             <a href="{% url 'start' %}" class="sign-up-button btn btn-lg text-uppercase py-2">Home</a>
           </h4>
