added more links to base/footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -221,11 +221,18 @@
   <!-- Footer -->
   <center>
     <footer class="footer mt-auto py-2 light-bg">
-      <span class="m-0 text-center text-black">2023 ShemmyYo - Project developed for Educational purposes</span>
+      <span class="m-0 text-center text-black">
+        2023 ShemmyYo - Project developed for Educational purposes</span>
       <span class="m-0 text-center text-black">
         <a href="https://github.com/ShemmyYo/" target="_blank" rel="noopener"
-          aria-label="Visit my GitHub page(opens in a new tab)" id="copyright-text"><i
-            class="fab fa-github-square ms-3"></i></a>
+          aria-label="Visit my GitHub page(opens in a new tab)" id="copyright-text">
+          <i class="fab fa-github-square ms-3"></i></a>
+        <a href="https://www.linkedin.com/in/przemek-shemmy-gotner/" target="_blank" 
+          rel="noopener" aria-label="Visit my LinkedIn page(opens in a new tab)">
+          <i class="fa-brands fa-linkedin"></i></a></li>
+        <a href="https://instagram.com" target="_blank" rel="noopener" 
+          aria-label="Visit our Instagram page(opens in a new tab)">
+          <i class="fa-brands fa-instagram"></i></a></li>
       </span>
     </footer>
   </center>
