changed recipe_details and recipe_blog to include commenter profile pic in comment

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
               <i class="fa-solid fa-user fa-xs"></i>
             </a>
           {% else %}
-            <a href="{% url 'show-profile' user.pk %}" 
+            <a href="{% url 'create-profile-page' %}" 
               class="btn btn-sm btn-outline-light headline-bttn"> Create Profile 
               <i class="fa-solid fa-user fa-xs"></i>
             </a>
