update README with Epics/Admin/User Stories

--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -155,7 +155,15 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row g-0">
                             <div class="col-md-2">
-                                <img src="{{ post.author.profile.profile_pic.url }}" class="img-fluid rounded-start" alt="Profiel picture">
+                                <center>
+                                    {% if comment.post_user_id.profile.profile_pic %}                                
+                                    <img src="{{ comment.post_user_id.profile.profile_pic.url }}" 
+                                        class="img-fluid rounded-start" alt="Profiel picture">
+                                    {% else %}
+                                    <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1681317396/profile_img.png" 
+                                        class="img-fluid rounded-start" alt="Default profiel picture">
+                                    {% endif %}
+                                </center>
                             </div>
                             <div class="col-md-10">
                                 <!-- The body of the comment goes before the | -->      
@@ -177,7 +185,7 @@
                     <!-- Additional Options as a Superuser -->
                     {% if  user.is_superuser %}
                     
-                    <a href="{% url 'comment-delete' comment.pk %}" class="btn btn-sm col-12 btn-outline-danger"><span>Delete Comment</span></a>
+                    <a href="{% url 'comment-delete' comment.pk %}" class="btn btn-sm col-10 offset-1 col-sm-5 offset-sm-1 btn-outline-danger"><span>Delete Comment</span></a>
                     {% endif %}
                 </div>
                 <hr>
