--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
-{% block content %}
 
+{% block content %}
 
 <!-- Blank section -->
 <section class="section-blank">
@@ -116,4 +116,4 @@
   </div>
 </section>
 
-{% endblock %}
+{% endblock content %}
