--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,6 @@
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon_io/apple-touch-icon.png' %} ">
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon_io/favicon-32x32.png' %}">
   <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon_io/favicon-16x16.png' %}">
-  <link rel="manifest" href="{% static 'images/favicon_io/site.webmanifest' %}">
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,6 +20,17 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Font Awsome -->
+  <script src="https://kit.fontawesome.com/d1f1e1791a.js" crossorigin="anonymous"></script>
+  <!-- GSAP Library: https://cdnjs.com/libraries/gsap -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
+    integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"
+    integrity="sha512-RL2ypMFkOs/iB79bWnNiFrZRCqyExtQ38n/K+t7Xjf09YZcvSzqgSaGVj+fiVYEqVRLf/WjdHmwGImZM3XO5gA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+  </script>
   <!-- GSAP TweenMax & TimelineMax Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"
     integrity="sha512-DkPsH9LzNzZaZjCszwKrooKwgjArJDiEjA5tTgr3YX4E6TYv93ICS8T41yFHJnnSmGpnf0Mvb5NhScYbwvhn2w=="
@@ -32,11 +42,16 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
   </script>
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-  <!-- Bootstrap 5 -->
+  <!-- Bootstrap  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
+    integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous">
+  </script>
 
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <script src="{% static 'js/script.js' %}" defer></script>
@@ -228,40 +243,17 @@
         <a href="https://github.com/ShemmyYo/" target="_blank" rel="noopener"
           aria-label="Visit my GitHub page(opens in a new tab)" id="copyright-text">
           <i class="fab fa-github-square ms-3"></i></a>
-        <a href="https://www.linkedin.com/in/przemek-shemmy-gotner/" target="_blank" 
-          rel="noopener" aria-label="Visit my LinkedIn page(opens in a new tab)">
+        <a href="https://www.linkedin.com/in/przemek-shemmy-gotner/" target="_blank" rel="noopener"
+          aria-label="Visit my LinkedIn page(opens in a new tab)">
           <i class="fa-brands fa-linkedin"></i></a></li>
-        <a href="https://instagram.com" target="_blank" rel="noopener" 
+        <a href="https://instagram.com" target="_blank" rel="noopener"
           aria-label="Visit our Instagram page(opens in a new tab)">
           <i class="fa-brands fa-instagram"></i></a></li>
       </span>
     </footer>
   </center>
-
 </body>
-
-<!-- Bootstrap  -->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-  integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
-  integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous">
-</script>
-
-<!-- Font Awsome -->
-<script src="https://kit.fontawesome.com/d1f1e1791a.js" crossorigin="anonymous"></script>
-
-<!-- GSAP Library: https://cdnjs.com/libraries/gsap -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
-  integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
-  crossorigin="anonymous" referrerpolicy="no-referrer">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"
-  integrity="sha512-RL2ypMFkOs/iB79bWnNiFrZRCqyExtQ38n/K+t7Xjf09YZcvSzqgSaGVj+fiVYEqVRLf/WjdHmwGImZM3XO5gA=="
-  crossorigin="anonymous" referrerpolicy="no-referrer">
-</script>
-
-<!-- Timeout 3s close messages -->
+<!-- Timeout 5s close messages -->
 <script>
   setTimeout(function () {
     let messages = document.getElementById("msg");
