fixed error 500 in production

--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,7 @@
   <div class="row h-100">
     <div class="col col-lg-6 col-md-8 col-sm-12 m-auto text-center p-3">
       <div class="card border-0">
-        <img src="#" class="card-img-top" alt="404 page image">
+        <img src="{% static 'images/shemmylicious-logo.png %}" class="card-img-top" alt="404 page image">
         <div class="card-body">
           <h1 class="card-title logo-text">Oops, page not found</h1>
           <h5 class="card-text">Looks like you got lost along the way.</h5>
