--- a/templates/400.html
+++ b/templates/400.html
@@ -8,7 +8,7 @@
   <div class="row h-100">
     <div class="col col-lg-6 col-md-8 col-sm-12 m-auto text-center p-3">
       <div class="card border-0">
-        <img src="#" class="card-img-top" alt="400 page image">
+        <img src="{% static 'images/shemmylicious-logo.png %}" class="card-img-top" alt="400 page image">
         <div class="card-body">
           <h1 class="card-title logo-text">Oops, bad request</h1>
           <h4>
