updated readme with wireframes

--- a/templates/base.html
+++ b/templates/base.html
@@ -128,7 +128,7 @@
 
                 <li class="nav-item nav-link-s">
                   <div class="nav-item-s">
-                    <a class="nav-link" href="{% url 'logout-user' %}">Logout <i
+                    <a class="nav-link" href="{% url 'account_logout' %}">Logout <i
                         class="fa-solid fa-right-from-bracket fa-beat-fade fa-xs"></i></a>
                   </div>
                 </li>
