--- a/templates/recipe_search.html
+++ b/templates/recipe_search.html
@@ -48,12 +48,17 @@
             </div>
         </div>
     </div>
+    {% empty %}
+    <center>
+      <br>
+      <br>
+      <h1>No searches results to display!</h1>
+      <p>go on... Create your own Recipe</p>
+    </center>
+      <a href="{% url 'add-recipe' %}" class="btn col-10 offset-1 col-lg-6 offset-lg-3 btn-outline-success">Add Recipe</a>
+    <hr>
     {% endfor %}
-</div>
-<br>
-<br>
-<br>
-<div class="container col-lg-8 offset-lg-2 col-10 offset-1 text-right">
-    <a href="{% url 'recipes' %}" class="btn btn-sm col-2 offset-5 btn-outline-success">Home</a>
+
+    <a href="{% url 'recipes' %}" class="btn col-10 offset-1 col-lg-6 offset-lg-3 btn-outline-success">Home</a>
 </div>
 {% endblock content %}
