Changed error pages template descr.

--- a/templates/400.html
+++ b/templates/400.html
@@ -8,11 +8,12 @@
   <div class="row h-100">
     <div class="col col-lg-6 col-md-8 col-sm-12 m-auto text-center p-3">
       <div class="card border-0">
-        <img src="{% static 'images/shemmylicious-logo.png %}" class="card-img-top" alt="400 page image">
+        <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679649965/media/Shemmylicious/recipe.png" 
+          class="card-img-top" alt="400 page image">
         <div class="card-body">
-          <h1 class="card-title logo-text">Oops, bad request</h1>
+          <h1 class="card-title logo-text">Error 400: Oops, Action Forbidden</h1>
           <h4>
-            <a href="{% url 'start' %}" class="sign-up-button btn btn-lg text-uppercase py-2">Home</a>
+            <a href="{% url 'start' %}" class="btn btn-lg col-12 btn-outline-success text-uppercase py-2">Home</a>
           </h4>
         </div>
       </div>
