--- a/templates/500.html
+++ b/templates/500.html
@@ -11,7 +11,7 @@
         <img src="https://res.cloudinary.com/dteyj4llb/image/upload/v1679649965/media/Shemmylicious/recipe.png" 
           class="card-img-top" alt="500 page image">
         <div class="card-body">
-          <h1 class="card-title logo-text">Oops, Server Error</h1>
+          <h1 class="card-title logo-text">Error 500: Oops, Internal Server Error</h1>
           <h4>
             <a href="{% url 'start' %}" class="btn btn-lg col-12 btn-outline-success text-uppercase py-2">Home</a>
           </h4>
