added if statment to script in base to prevent error

--- a/templates/base.html
+++ b/templates/base.html
@@ -256,9 +256,11 @@
   <script>
     setTimeout(function () {
       let messages = document.getElementById("msg");
+      if (messages) {
       let alert = new bootstrap.Alert(messages);
       alert.close();
-    }, 5000);
+      }
+      }, 5000);
   </script>
 </body>
 
