--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,11 @@
 {% load static %}
-
 <!DOCTYPE html>
-<html class="h-100">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}Shemmylicious food{% endblock title %}</title>
-
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon_io/apple-touch-icon.png' %} ">
   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon_io/favicon-32x32.png' %}">
@@ -19,12 +17,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Sen:wght@400;700;800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   <script src="{% static 'js/script.js' %}" defer></script>
-
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
@@ -52,36 +49,29 @@
           </li>
           <!-- Nav Links visible when User is authenticated -->
           {% if user.is_authenticated %}
-
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
               <a class="nav-link" aria-current="page" href="{% url 'recipes' %}">Recipes</a>
             </div>
           </li>
-
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
               <a class="nav-link" aria-current="page" href="{% url 'categories' %}">Categories</a>
             </div>
           </li>
-
           <li class="nav-item nav-link-s">
             <div class="nav-item-s">
               <a class="nav-link" aria-current="page" href="{% url 'blog' %}">Blog</a>
             </div>
           </li>
-
           <li class="nav-item nav-link-s dropdown">
             <div class="nav-item-s">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 {{ user }} <i class="fa-solid fa-user fa-xs"></i>
               </a>
-
               <ul class="dropdown-menu nav-justified ">
-
                 <li class="nav-item nav-link-s">
-
                   <div class="nav-item-s">
                     {% if user.profile.id %}
                 <li class="nav-item nav-link-s">
@@ -108,7 +98,6 @@
                   </div>
                 </li>
                 {% endif %}
-
                 <!-- Visible for Admin only -->
                 {% if user.is_superuser %}
                 <li class="nav-item nav-link-s">
@@ -125,7 +114,6 @@
                 </li>
                 <hr>
                 {% endif %}
-
                 <li class="nav-item nav-link-s">
                   <div class="nav-item-s">
                     <a class="nav-link" href="{% url 'account_logout' %}">Sign Out <i
@@ -137,31 +125,20 @@
         </ul>
       </div>
       </li>
-
       {% else %}
-
-      <li class="nav-item nav-link-s">
-        <div class="nav-item-s">
-          <a class="nav-link" aria-current="page" href="#about">About</a>
-        </div>
-      </li>
-
       <li class="nav-item nav-link-s">
         <div class="nav-item-s">
           <a class="nav-link" href="{% url 'register' %}">Sign-up <i
               class="fa-solid fa-user-plus fa-beat-fade fa-xs"></i></a>
         </div>
       </li>
-
       <li class="nav-item nav-link-s">
         <div class="nav-item-s">
           <a class="nav-link" href="{% url 'login-user' %}">Login <i
               class="fa-solid fa-arrow-right-to-bracket fa-beat-fade fa-xs"></i></a>
         </div>
       </li>
-
       {% endif %}
-
       </ul>
     </div>
     <!-- Search Bar -->
@@ -191,7 +168,6 @@
       </div>
     </div>
   </div>
-
   <main class="flex-shrink-0 main-bg scrollable">
     {% block content %}
     <!--  Block Recipe Column -->
@@ -204,24 +180,21 @@
   <br>
   <div id="about"></div>
   <!-- Footer -->
-  <center>
-    <footer class="footer mt-auto py-2 light-bg">
-      <span class="m-0 text-center text-black">
-        2023 ShemmyYo - Project developed for Educational purposes</span>
-      <span class="m-0 text-center text-black">
-        <a href="https://github.com/ShemmyYo/" target="_blank" rel="noopener"
-          aria-label="Visit my GitHub page(opens in a new tab)" id="copyright-text">
-          <i class="fab fa-github-square ms-3"></i></a>
-        <a href="https://www.linkedin.com/in/przemek-shemmy-gotner/" target="_blank" rel="noopener"
-          aria-label="Visit my LinkedIn page(opens in a new tab)">
-          <i class="fa-brands fa-linkedin"></i></a></li>
-        <a href="https://instagram.com" target="_blank" rel="noopener"
-          aria-label="Visit our Instagram page(opens in a new tab)">
-          <i class="fa-brands fa-instagram"></i></a></li>
-      </span>
-    </footer>
-  </center>
-
+  <footer class="footer mt-auto py-2 light-bg text-center">
+    <span class="m-0 text-center text-black">
+      2023 ShemmyYo - Project developed for Educational purposes</span>
+    <span class="m-0 text-center text-black">
+      <a href="https://github.com/ShemmyYo/" target="_blank" rel="noopener"
+        aria-label="Visit my GitHub page(opens in a new tab)" id="copyright-text">
+        <i class="fab fa-github-square ms-3"></i></a>
+      <a href="https://www.linkedin.com/in/przemek-shemmy-gotner/" target="_blank" rel="noopener"
+        aria-label="Visit my LinkedIn page(opens in a new tab)">
+        <i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://instagram.com" target="_blank" rel="noopener"
+        aria-label="Visit our Instagram page(opens in a new tab)">
+        <i class="fa-brands fa-instagram"></i></a>
+    </span>
+  </footer>
   <!-- Font Awsome -->
   <script src="https://kit.fontawesome.com/d1f1e1791a.js" crossorigin="anonymous"></script>
   <!-- GSAP Library: https://cdnjs.com/libraries/gsap -->
@@ -257,10 +230,10 @@
     setTimeout(function () {
       let messages = document.getElementById("msg");
       if (messages) {
-      let alert = new bootstrap.Alert(messages);
-      alert.close();
+        let alert = new bootstrap.Alert(messages);
+        alert.close();
       }
-      }, 5000);
+    }, 5000);
   </script>
 </body>
 
