html check registration.html

--- a/members/templates/registration/registration.html
+++ b/members/templates/registration/registration.html
@@ -36,15 +36,15 @@
                     <label for="id_email">* Email address</label>
                 </div><br>
                 <div class="form-floating mb-3">
-                    <input type="password" class="form-control" name="password1" id="id_password1" placeholder="Password" required>
+                    <input type="password" class="form-control" name="password1" id="id_password1"
+                        placeholder="Password" required>
                     <label for="id_password1">* Password</label>
-                    <p><small class="helptext">
-                        <ul>
-                            <li>Your password can’t be too similar to your other personal information.</li>
-                            <li>Your password must contain at least 8 characters.</li>
-                            <li>Your password can’t be a commonly used password.</li>
-                            <li>Your password can’t be entirely numeric.</li>
-                        </ul></small></p>
+                    <ul class="helptext">
+                        <li><small>Your password can’t be too similar to your other personal information.</small></li>
+                        <li><small>Your password must contain at least 8 characters.</small></li>
+                        <li><small>Your password can’t be a commonly used password.</small></li>
+                        <li><small>Your password can’t be entirely numeric.</small></li>
+                    </ul>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="password" class="form-control" name="password2" id="id_password2" placeholder="Password" required>
