--- a/templates/recipe_add_category.html
+++ b/templates/recipe_add_category.html
@@ -11,16 +11,13 @@
     <br>
     <div class="col-10 offset-1 col-md-8 offset-md-2">
         {% if submitted %}
-        <center>
-            <br>
-            <br>
-            <h5>Category was Submitted Succesfully, {{ user }}!</h5>
-            <br>
-            <br>
-            <a href="{% url 'recipes' %}" class="btn col-10 offset-1 col-md-2 offset-md-4 btn-outline-success">Back</a>
-            <a href="{% url 'recipe-mylist' %}" class="btn col-10 offset-1 col-md-2 btn-outline-success">My Recipes</a>
-        </center>
-
+        <br>
+        <br>
+        <h5 class="text-center">Category was Submitted Succesfully, {{ user }}!</h5>
+        <br>
+        <br>
+        <a href="{% url 'recipes' %}" class="btn col-10 offset-1 col-md-2 offset-md-4 btn-outline-success">Back</a>
+        <a href="{% url 'recipe-mylist' %}" class="btn col-10 offset-1 col-md-2 btn-outline-success">My Recipes</a>
         {% else %}
         <br>
         <br>
@@ -30,27 +27,25 @@
         <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-floating mb-3">
-                <input type="text" class="form-control textInput" name="category_name" id="div_id_category_name" 
-                placeholder="Type in Category Name" required>
+                <input type="text" class="form-control textInput" name="category_name" id="div_id_category_name"
+                    placeholder="Type in Category Name" required>
                 <label for="div_id_category_name"> * Type in Category Name</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="text" class="form-control textInput" name="featured_comment" id="featured_comment" 
-                placeholder="Username" required>
+                <input type="text" class="form-control textInput" name="featured_comment" id="featured_comment"
+                    placeholder="Username" required>
                 <label for="featured_comment"> * Type in Category Comment</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="file" class="form-control fileInput fileUpload form-control-file" name="featured_image" 
-                id="div_id_featured_image" placeholder=" * Category image">
+                <input type="file" class="form-control fileInput fileUpload form-control-file" name="featured_image"
+                    id="div_id_featured_image" placeholder=" * Category image">
                 <label for="div_id_featured_image"></label>
             </div>
             <br>
-            <center>
-                <div class="d-grid gap-2 col-12">
-                    <input type="submit" value="Add Category" class="btn btn-outline-success">
-                    <a href="{% url 'recipes' %}" class="btn btn-outline-success">Back</a>
-                </div>
-            </center>
+            <div class="d-grid gap-2 col-12 text-center">
+                <input type="submit" value="Add Category" class="btn btn-outline-success">
+                <a href="{% url 'recipes' %}" class="btn btn-outline-success">Back</a>
+            </div>
         </form>
         <br>
 
@@ -65,9 +60,7 @@
 </div>
 
 {% else %}
-<center>
-    <h1>You're not logged in!</h1>
-</center>
+<h1 class="text-center">You're not logged in!</h1>
 {% endif %}
 
 {% endblock content %}
